# ROS

./: OUTPUT.txt
TurtleBot3/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
TurtleBot3/catkin_ws/devel/lib/pkgconfig/: turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
TurtleBot3/catkin_ws/devel/lib/python3/dist-packages/turtlebot3_example/: __init__.py
TurtleBot3/catkin_ws/devel/lib/python3/dist-packages/turtlebot3_teleop/: __init__.py
TurtleBot3/catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
TurtleBot3/catkin_ws/devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_client  turtlebot3_cliff  turtlebot3_obstacle  turtlebot3_pointop_key  turtlebot3_server  turtlebot3_sonar
TurtleBot3/catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
TurtleBot3/catkin_ws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
TurtleBot3/catkin_ws/devel/lib/turtlebot3_slam/: flat_world_imu_node
TurtleBot3/catkin_ws/devel/share/gennodejs/ros/turtlebot3_example/msg/: _index.js
TurtleBot3/catkin_ws/devel/share/roseus/ros/turtlebot3_example/: manifest.l
TurtleBot3/catkin_ws/devel/share/roseus/ros/turtlebot3_msgs/: manifest.l
TurtleBot3/catkin_ws/devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_msgs/cmake/: turtlebot3_msgs-msg-paths.cmake  turtlebot3_msgsConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_slam/cmake/: turtlebot3_slamConfig.cmake
TurtleBot3/catkin_ws/devel/share/turtlebot3_teleop/cmake/: turtlebot3_teleopConfig.cmake
devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: test_description.pc  test_gazebo.pc  turtlebot3_description.pc
devel/lib/test_gazebo/: independent_listener  integrated_main  robot_controller
devel/share/test_description/cmake/: test_descriptionConfig.cmake
devel/share/test_gazebo/cmake/: test_gazeboConfig.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
src/test_description_OLD/: CMakeLists.txt  package.xml
src/test_gazebo/: CMakeLists.txt
src/test_gazebo/launch/: animated_box.launch  robot_simulation.launch  test.launch
src/test_gazebo/models/turtlebot3_burger/: model.sdf
src/test_gazebo/src/: Ball_Detector.py  CMakeLists.txt  animated_box.cpp  independent_listener.cpp  integrated_main.cpp  robot_controller.cpp  robot_controller.py
src/test_gazebo/worlds/: animated_box.world  test.world
src/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
